--- a/_site.yml
+++ b/_site.yml
@@ -14,5 +14,6 @@ navbar:
 base_url: http://TesseRodrigue.github.io/rodrigue-tesse-blog/
 collections:
     posts:
+      disqus: rodrigue-tesse-blog
       share: [twitter, linkedin, facebook]
 output: distill::distill_article
