Article 1, highlight and vocabulary

--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,5 @@
 name: "blog-template"
-title: "Tesse Rodrigue's Blog"
+title: "Tesse Rodrigue's Blog about Invasive species"
 output_dir: "docs"
 navbar:
   right:
